<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_num5"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:text="@string/five"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_num1"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_above="@id/button_num5"
        android:layout_toLeftOf="@id/button_num5"
        android:text="@string/one"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_num2"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_above="@id/button_num5"
        android:layout_toRightOf="@id/button_num1"
        android:text="@string/two"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_num3"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_above="@id/button_num5"
        android:layout_toRightOf="@id/button_num2"
        android:text="@string/three"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_num4"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_below="@id/button_num1"
        android:layout_toLeftOf="@id/button_num5"
        android:text="@string/four"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_num6"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_below="@id/button_num3"
        android:layout_toRightOf="@id/button_num5"
        android:text="@string/six"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_num7"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_below="@id/button_num5"
        android:layout_toLeftOf="@id/button_num5"
        android:text="@string/seven"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_num8"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_below="@id/button_num5"
        android:layout_toRightOf="@id/button_num7"
        android:text="@string/eight"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_num9"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_below="@id/button_num5"
        android:layout_toRightOf="@id/button_num8"
        android:text="@string/nine"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_num0"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_below="@id/button_num8"
        android:layout_centerInParent="true"
        android:text="@string/zero"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_dot"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_below="@id/button_num8"
        android:layout_toRightOf="@id/button_num0"
        android:layout_centerInParent="true"
        android:text="@string/dot"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_epual"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_above="@id/button_num3"
        android:layout_toRightOf="@id/button_num2"
        android:layout_centerInParent="true"
        android:text="@string/equal"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_below="@id/button_num8"
        android:layout_toLeftOf="@id/button_num0"
        android:layout_centerInParent="true"
        android:text="@string/cancel"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_plus"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_below="@id/button_num0"
        android:layout_marginLeft="65dp"
        android:text="@string/plus"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_divide"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_below="@id/button_plus"
        android:layout_marginLeft="195dp"
        android:text="@string/divide"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_below="@id/button_plus"
        android:layout_marginLeft="65dp"
        android:text="@string/multiply"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_subtract"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_below="@id/button_num0"
        android:layout_marginLeft="195dp"
        android:text="@string/subtract"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/input_num"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_above="@id/button_num2"
        android:inputType="numberDecimal"
        android:textSize="30sp"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:maxLines="1"
        />
</RelativeLayout>